--- a/App03.Network/Views/UdpWindow.xaml
+++ b/App03.Network/Views/UdpWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:converter="clr-namespace:App03.Network.Converter"
         mc:Ignorable="d"
-        Title="网卡切换Demo" SizeToContent="WidthAndHeight" ResizeMode="NoResize">
+        WindowStartupLocation="CenterScreen"
+        Title="网卡切换-UDP" SizeToContent="WidthAndHeight" ResizeMode="NoResize">
     <Window.Resources>
         <converter:InvertBoolConverter x:Key="InvertBoolConverter" />
     </Window.Resources>
@@ -34,13 +35,15 @@
 
                 <GroupBox Grid.Row="1" Header="网卡切换" Width="300" Height="400" HorizontalAlignment="Left"
                           VerticalAlignment="Top">
-                    <StackPanel>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
                         <ComboBox x:Name="NetComboBox" DisplayMemberPath="Description"
-                                  SelectionChanged="NetComboBox_OnSelectionChanged" />
-                        <RichTextBox Name="RecvDataRichTextBox" BorderThickness="0" IsReadOnly="True" Height="350">
-                            <FlowDocument LineHeight="1.5" FontSize="12" FontFamily="Lucida Console" PageWidth="1000" />
-                        </RichTextBox>
-                    </StackPanel>
+                                  SelectionChanged="NetComboBox_OnSelectionChanged" Grid.Row="0"/>
+                        <ListView x:Name="LvReceive" Grid.Row="1"/>
+                    </Grid>
                 </GroupBox>
 
                 <Grid Grid.Row="2" Height="30">
@@ -66,7 +69,7 @@
             </StatusBar>
         </DockPanel>
 
-        <TextBox x:Name="XuNiBox" Width="1" Height="1" VerticalAlignment="Top" HorizontalAlignment="Left" />
+        <TextBox x:Name="XuNiBox" Width="1" Height="1" Style="{x:Null}" />
 
         <Grid x:Name="MaskProgressBar" Background="#80000000" Visibility="Visible">
             <Grid.RowDefinitions>
