--- a/App03.Network/Views/TcpWindow.xaml
+++ b/App03.Network/Views/TcpWindow.xaml
@@ -77,7 +77,7 @@
                     <ColumnDefinition Width="2" />
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" />
-                <Button Grid.Column="1" Style="{DynamicResource CloseButton}" Content="x" Click="Button_Click_Close" />
+                <Button Grid.Column="1" Style="{DynamicResource CloseButton}" Content="x" Click="ButtonClose_OnClick" />
                 <TextBlock Grid.Column="2" />
             </Grid>
             <StackPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
