--- a/App11.HIK/Views/PageInWindow.xaml
+++ b/App11.HIK/Views/PageInWindow.xaml
@@ -30,7 +30,7 @@
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
                         <Border Grid.Column="0">
-                            <Image Source="{Binding Type, Converter={StaticResource TypeToImageSourceConverter}}"
+                            <Image Source="{Binding ModelType, Converter={StaticResource TypeToImageSourceConverter}}"
                                    Stretch="Fill" Margin="5,0,5,0" Height="40" />
                         </Border>
 
