--- a/App11.HIK/Control/HikView.xaml
+++ b/App11.HIK/Control/HikView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:forms="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
              xmlns:models="clr-namespace:App11.HIK.Models"
+             xmlns:interop="clr-namespace:Microsoft.DwayneNeed.Interop;assembly=Microsoft.DwayneNeed"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=models:JsNode , IsDesignTimeCreatable=True}"
              d:DesignHeight="300" d:DesignWidth="300">
@@ -14,10 +15,14 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <WindowsFormsHost HorizontalAlignment="Stretch">
-                <forms:PictureBox x:Name="VideoControl" BackColor="Black" AutoSize="True" />
-            </WindowsFormsHost>
-                
+            <interop:AirspaceDecorator AirspaceMode="None"
+                                       IsInputRedirectionEnabled="True"
+                                       IsOutputRedirectionEnabled="True">
+                <WindowsFormsHost HorizontalAlignment="Stretch">
+                    <forms:PictureBox x:Name="VideoControl" BackColor="Black" AutoSize="True" />
+                </WindowsFormsHost>
+            </interop:AirspaceDecorator>
+
             <Grid x:Name="PanelBack" Background="#EFFF">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -34,7 +39,7 @@
         </Grid>
 
         <WrapPanel VerticalAlignment="Bottom" Grid.Row="1">
-            <Button x:Name="BtnPreview" Content="预览" Click="BtnPreview_OnClick" IsEnabled="False"/>
+            <Button x:Name="BtnPreview" Content="预览" Click="BtnPreview_OnClick" IsEnabled="False" />
             <Button x:Name="BtnShotJpeg" Content="抓图" Click="ButtonShotJpeg_OnClick" Margin="5,0,0,0" />
             <Button x:Name="BtnRecord" Content="开始录像" Click="ButtonRecord_OnClick" Margin="5,0,0,0" />
             <TextBlock Text="{Binding NodeName}" />
