--- a/App11.HIK/Views/SplashWindow.xaml
+++ b/App11.HIK/Views/SplashWindow.xaml
@@ -10,10 +10,10 @@
         <WrapPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" >
             <Button Content="Toast" Click="ButtonToast_OnClick" Margin="5"/>
             <Button Content="多个海康-1" Click="ButtonDuo1_OnClick" Margin="5"/>
-            <Button Content="多个海康" Click="ButtonDuo_OnClick" Margin="5"/>
-            <Button Content="布局装载" Click="ButtonXaml_OnClick" Margin="5"/>
+            <Button Content="多个海康-2" Click="ButtonDuo2_OnClick" Margin="5"/>
+            <Button Content="布局实现" Click="ButtonXaml_OnClick" Margin="5"/>
             <Button Content="使用Page" Click="ButtonPage_OnClick" Margin="5"/>
-            <Button Content="代码装载" Click="ButtonDyna_OnClick" Margin="5"/>
+            <Button Content="代码实现" Click="ButtonDyna_OnClick" Margin="5"/>
         </WrapPanel>
     </Grid>
 </Window>
