--- a/App11.HIK/Views/Duo2Window.xaml
+++ b/App11.HIK/Views/Duo2Window.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:control="clr-namespace:App11.HIK.Control"
         mc:Ignorable="d"
-        Title="Duo2Window" Height="600" Width="800">
+        Title="多设备-2" VerticalContentAlignment="Stretch" Width="800">
     <ScrollViewer>
         <Grid>
             <Grid.ColumnDefinitions>
