--- a/App13.Worker/App.xaml
+++ b/App13.Worker/App.xaml
@@ -9,6 +9,7 @@
                 <ui:ThemeResources />
                 <ui:XamlControlsResources />
                 <!-- Other merged dictionaries here -->
+                <ResourceDictionary Source="Resources/Styles/AnimatedSlider.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
         </ResourceDictionary>
