--- a/App14.IASystem/Views/MainWindow.xaml
+++ b/App14.IASystem/Views/MainWindow.xaml
@@ -174,6 +174,30 @@
                     </StackPanel>
                 </Grid>
             </TabItem>
+            
+            <TabItem x:Name="RecWqmTab" Header="数据" Selector.Selected="RecsTab_OnSelected"
+                     d:DataContext="{d:DesignInstance d:Type=vm:RecsTabViewModel, IsDesignTimeCreatable=True}">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <DataGrid Grid.Column="0" x:Name="DataGridRecs"
+                              ItemsSource="{Binding WqmsCollection}"
+                              SelectedItem="{Binding SelectedRecWqm, Mode=TwoWay}">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="温度" Binding="{Binding HtTemp}" />
+                            <DataGridTextColumn Header="PH" Binding="{Binding HtPh}" />
+                            <DataGridTextColumn Header="溶氧浓度" Binding="{Binding HtDor}" />
+                            <DataGridTextColumn Header="溶氧饱和度" Binding="{Binding HtDosat}" />
+                            <DataGridTextColumn Header="设备" Binding="{Binding Device.SerialNum}" />
+                            <DataGridTextColumn Header="时间戳"
+                                                Binding="{Binding Path=TimeStamp, StringFormat={}{0:yyyy-MM-dd HH:mm:ss}}" />
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </Grid>
+            </TabItem>
         </TabControl>
     </Grid>
 </Window>
