--- a/App14.IASystem/Views/MainWindow.xaml
+++ b/App14.IASystem/Views/MainWindow.xaml
@@ -196,6 +196,31 @@
                                                 Binding="{Binding Path=TimeStamp, StringFormat={}{0:yyyy-MM-dd HH:mm:ss}}" />
                         </DataGrid.Columns>
                     </DataGrid>
+                    
+                    <Grid Grid.Column="1">
+                        <HeaderedContentControl Header="功能区" Margin="0,5,0,0"
+                                                Style="{StaticResource H3HeaderedContentControl}">
+                            <StackPanel>
+                                <WrapPanel>
+                                    <ComboBox VerticalAlignment="Center" Width="150" Margin="5,5,0,5"
+                                              ItemsSource="{Binding PoolList}"
+                                              DisplayMemberPath="Name"
+                                              SelectedIndex="{Binding SelectedPoolIndex}"
+                                              SelectedItem="{Binding SelectedPool, Mode=TwoWay}"/>
+                                    <ComboBox VerticalAlignment="Center" Width="150" Margin="5,5,0,5"
+                                              ItemsSource="{Binding SelectedPool.Devices}"
+                                              DisplayMemberPath="NodeName"
+                                              SelectedIndex="{Binding SelectedDeviceIndex}"
+                                              SelectedItem="{Binding SelectedDevice, Mode=TwoWay}"/>
+                                    <CheckBox Content="产生模拟数据" Margin="5,5,0,5"
+                                              Command="{Binding GenerateDataCommand}"
+                                              CommandParameter="{Binding IsChecked, RelativeSource={RelativeSource Self}, Mode=OneWay}" />
+                                </WrapPanel>
+                            
+                                <ProgressBar Value="{Binding CurrentProgress}" Maximum="100" Minimum="0"/>
+                            </StackPanel>
+                        </HeaderedContentControl>
+                    </Grid>
                 </Grid>
             </TabItem>
         </TabControl>
