--- a/App14.IASystem/Views/MainWindow.xaml
+++ b/App14.IASystem/Views/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:App14.IASystem.ViewModels"
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:wpf="clr-namespace:InteractiveDataDisplay.WPF;assembly=InteractiveDataDisplay.WPF"
         mc:Ignorable="d"
         Title="IASystem" Height="800" Width="1200" Loaded="Window_Loaded">
     <Window.Resources>
@@ -61,9 +62,11 @@
                                 <TextBlock Grid.Row="0" Grid.Column="0" Text="鱼塘" />
                                 <TextBlock Grid.Row="0" Grid.Column="2" Text="进度" />
                                 <TextBlock Grid.Row="0" Grid.Column="4" Text="添加日期" />
-                                
-                                <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center" Text="{Binding SelectedPool.Name}" />
-                                <TextBlock Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" VerticalAlignment="Center" Text="{Binding SelectedPool.Progress}" />
+
+                                <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center"
+                                           Text="{Binding SelectedPool.Name}" />
+                                <TextBlock Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" VerticalAlignment="Center"
+                                           Text="{Binding SelectedPool.Progress}" />
                                 <DatePicker Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="2" Width="120"
                                             SelectedDate="{Binding SelectedPool.AddDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             </Grid>
@@ -71,7 +74,8 @@
 
                         <HeaderedContentControl Header="鱼塘说明" Margin="0,5,0,0"
                                                 Style="{StaticResource H3HeaderedContentControl}">
-                            <TextBlock Text="{Binding SelectedPool.Note}" Height="100" Margin="5" TextTrimming="CharacterEllipsis"
+                            <TextBlock Text="{Binding SelectedPool.Note}" Height="100" Margin="5"
+                                       TextTrimming="CharacterEllipsis"
                                        TextWrapping="Wrap" />
                         </HeaderedContentControl>
 
@@ -79,16 +83,18 @@
                                                 Style="{StaticResource H3HeaderedContentControl}">
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
                                 <StackPanel Grid.Column="1" Orientation="Vertical" Width="160">
-                                    <TextBlock Text="{Binding DeviceInfo.NodeName}" HorizontalAlignment="Left" Margin="5,5,0,5"/>
-                                    <Button Content="移除" Command="{Binding RemoveCommand}" HorizontalAlignment="Left" Margin="5,5,0,5"/>
+                                    <TextBlock Text="{Binding DeviceInfo.NodeName}" HorizontalAlignment="Left"
+                                               Margin="5,5,0,5" />
+                                    <Button Content="移除" Command="{Binding RemoveCommand}" HorizontalAlignment="Left"
+                                            Margin="5,5,0,5" />
                                     <ComboBox VerticalAlignment="Center" Width="120" Margin="5,5,0,5"
                                               ItemsSource="{Binding OwnerList}"
                                               DisplayMemberPath="Description"
-                                              SelectedIndex="{Binding SelectedIndex}"/>
+                                              SelectedIndex="{Binding SelectedIndex}" />
                                 </StackPanel>
                                 <DataGrid x:Name="DataGridSelectedPool"
                                           Grid.Column="0" ItemsSource="{Binding SelectedPool.Devices}"
@@ -104,7 +110,8 @@
                                     </DataGrid.Columns>
                                     <b:Interaction.Triggers>
                                         <b:EventTrigger EventName="SelectionChanged">
-                                            <b:InvokeCommandAction Command="{Binding DevicesGridSelectionChangedCommand}"/>
+                                            <b:InvokeCommandAction
+                                                Command="{Binding DevicesGridSelectionChangedCommand}" />
                                         </b:EventTrigger>
                                     </b:Interaction.Triggers>
                                 </DataGrid>
@@ -136,7 +143,7 @@
                             <DataGridTextColumn Header="固件版本" Binding="{Binding Firmware}" />
                         </DataGrid.Columns>
                     </DataGrid>
-                    
+
                     <StackPanel Grid.Column="1">
                         <HeaderedContentControl Header="基本信息" Margin="0,5,0,0"
                                                 Style="{StaticResource H3HeaderedContentControl}">
@@ -164,17 +171,23 @@
                                 <TextBlock Grid.Row="0" Grid.Column="2" Text="设备类型" />
                                 <TextBlock Grid.Row="0" Grid.Column="4" Text="添加日期" />
                                 <TextBlock Grid.Row="0" Grid.Column="6" Text="归属" />
-                                
-                                <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center" Text="{Binding SelectedDevice.NodeName}" />
-                                <TextBlock Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" VerticalAlignment="Center" Text="{Binding SelectedDevice.ModelNum}" />
-                                <DatePicker Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="2" VerticalAlignment="Center" Width="120" SelectedDate="{Binding SelectedDevice.AddDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                                <ComboBox Grid.Row="1" Grid.Column="6" Grid.ColumnSpan="2" VerticalAlignment="Center" Width="120" ItemsSource="{Binding OwnerList}" DisplayMemberPath="Description" SelectedIndex="{Binding SelectedIndex}"/>
+
+                                <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center"
+                                           Text="{Binding SelectedDevice.NodeName}" />
+                                <TextBlock Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" VerticalAlignment="Center"
+                                           Text="{Binding SelectedDevice.ModelNum}" />
+                                <DatePicker Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="2" VerticalAlignment="Center"
+                                            Width="120"
+                                            SelectedDate="{Binding SelectedDevice.AddDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                <ComboBox Grid.Row="1" Grid.Column="6" Grid.ColumnSpan="2" VerticalAlignment="Center"
+                                          Width="120" ItemsSource="{Binding OwnerList}" DisplayMemberPath="Description"
+                                          SelectedIndex="{Binding SelectedIndex}" />
                             </Grid>
                         </HeaderedContentControl>
                     </StackPanel>
                 </Grid>
             </TabItem>
-            
+
             <TabItem x:Name="RecWqmTab" Header="数据" Selector.Selected="RecsTab_OnSelected"
                      d:DataContext="{d:DesignInstance d:Type=vm:RecsTabViewModel, IsDesignTimeCreatable=True}">
                 <Grid>
@@ -196,9 +209,9 @@
                                                 Binding="{Binding Path=TimeStamp, StringFormat={}{0:yyyy-MM-dd HH:mm:ss}}" />
                         </DataGrid.Columns>
                     </DataGrid>
-                    
-                    <Grid Grid.Column="1">
-                        <HeaderedContentControl Header="功能区" Margin="0,5,0,0"
+
+                    <StackPanel Grid.Column="1">
+                        <HeaderedContentControl Header="生产模拟数据" Margin="5,5,0,0"
                                                 Style="{StaticResource H3HeaderedContentControl}">
                             <StackPanel>
                                 <WrapPanel>
@@ -206,24 +219,88 @@
                                               ItemsSource="{Binding PoolList}"
                                               DisplayMemberPath="Name"
                                               SelectedIndex="{Binding SelectedPoolIndex}"
-                                              SelectedItem="{Binding SelectedPool, Mode=TwoWay}"/>
+                                              SelectedItem="{Binding SelectedPool, Mode=TwoWay}" />
                                     <ComboBox VerticalAlignment="Center" Width="150" Margin="5,5,0,5"
                                               ItemsSource="{Binding SelectedPool.Devices}"
                                               DisplayMemberPath="NodeName"
                                               SelectedIndex="{Binding SelectedDeviceIndex}"
-                                              SelectedItem="{Binding SelectedDevice, Mode=TwoWay}"/>
-                                    <Button Content="产生模拟数据" Margin="5,5,0,5"
-                                              Command="{Binding DataCommand}" />
+                                              SelectedItem="{Binding SelectedDevice, Mode=TwoWay}" />
+                                </WrapPanel>
+
+                                <WrapPanel>
+                                    <ComboBox VerticalAlignment="Center" Width="150" Margin="5,5,0,5"
+                                              ItemsSource="{Binding Fonts}"
+                                              DisplayMemberPath="Item1"
+                                              SelectedIndex="{Binding SelectedFontIndex}"
+                                              SelectedItem="{Binding SelectedFont, Mode=TwoWay}" />
+                                </WrapPanel>
+
+                                <WrapPanel>
+                                    <Button Content="开始" Margin="5,5,0,5"
+                                            Command="{Binding DataCommand}" />
+                                    <Button Content="清除数据" Margin="5,5,0,5"
+                                            Command="{Binding ClearCommand}" />
                                     <Button Content="停止" Margin="5,5,0,5"
                                             Command="{Binding StopCommand}" />
-                                    <Button Content="清理数据" Margin="5,5,0,5"
-                                            Command="{Binding ClearCommand}" />
                                 </WrapPanel>
-                            
-                                <ProgressBar Value="{Binding CurrentProgress}" Maximum="100" Minimum="0"/>
+
+                                <ProgressBar Value="{Binding CurrentProgress}" Maximum="100" Minimum="0" />
                             </StackPanel>
                         </HeaderedContentControl>
-                    </Grid>
+
+                        <HeaderedContentControl Header="图表化数据" Margin="5,15,0,0"
+                                                Style="{StaticResource H3HeaderedContentControl}">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="250" />
+                                    <RowDefinition Height="250" />
+                                </Grid.RowDefinitions>
+                                <Grid Grid.Row="0" Grid.Column="0" Margin="5">
+                                    <wpf:Figure>
+                                        <wpf:PlotAxis AxisOrientation="Right" wpf:Figure.Placement="Right" />
+                                        <wpf:PlotAxis AxisOrientation="Top" wpf:Figure.Placement="Top" />
+                                        <wpf:LineGraph x:Name="linegraph0" />
+                                        <!-- wpf:MouseNavigation/ -->
+                                        <Border BorderThickness="0.5" BorderBrush="Black" />
+                                    </wpf:Figure>
+                                </Grid>
+
+                                <Grid Grid.Row="0" Grid.Column="1" Margin="5">
+                                    <wpf:Figure>
+                                        <wpf:PlotAxis AxisOrientation="Right" wpf:Figure.Placement="Right" />
+                                        <wpf:PlotAxis AxisOrientation="Top" wpf:Figure.Placement="Top" />
+                                        <wpf:LineGraph x:Name="linegraph1" />
+                                        <!-- wpf:MouseNavigation/ -->
+                                        <Border BorderThickness="0.5" BorderBrush="Black" />
+                                    </wpf:Figure>
+                                </Grid>
+
+                                <Grid Grid.Row="1" Grid.Column="0" Margin="5">
+                                    <wpf:Figure>
+                                        <wpf:PlotAxis AxisOrientation="Right" wpf:Figure.Placement="Right" />
+                                        <wpf:PlotAxis AxisOrientation="Top" wpf:Figure.Placement="Top" />
+                                        <wpf:LineGraph x:Name="linegraph2" />
+                                        <!-- wpf:MouseNavigation/ -->
+                                        <Border BorderThickness="0.5" BorderBrush="Black" />
+                                    </wpf:Figure>
+                                </Grid>
+
+                                <Grid Grid.Row="1" Grid.Column="1" Margin="5" Background="Coral">
+                                    <wpf:Figure>
+                                        <wpf:PlotAxis AxisOrientation="Right" wpf:Figure.Placement="Right" />
+                                        <wpf:PlotAxis AxisOrientation="Top" wpf:Figure.Placement="Top" />
+                                        <wpf:LineGraph x:Name="linegraph3" />
+                                        <!-- wpf:MouseNavigation/ -->
+                                        <Border BorderThickness="0.5" BorderBrush="Black" />
+                                    </wpf:Figure>
+                                </Grid>
+                            </Grid>
+                        </HeaderedContentControl>
+                    </StackPanel>
                 </Grid>
             </TabItem>
         </TabControl>
